added comments feature

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -33,5 +33,6 @@
           <p>Already have an account? <a href="/login">Sign in</a>.</p>
         </div>
       </form>
+      <script src="javascripts/main.js"></script>
 </body>
 </html>
