--- a/views/forum.ejs
+++ b/views/forum.ejs
@@ -15,13 +15,23 @@
     <!-- <h3><%= loggedUser %></h3> -->
     <h5><%= loggedUserId %></h5>
     <section class="comments-container">
-        <% for(let i = 0; i < comments.length; i++){ %>
+        <% for(let i = 0; i < subjects.length; i++){ %>
         <div class="comment">
-            <h3><%= comments[i].subject %></h3>
-            <div class="comment-body">
-                <p><%= comments[i].comment %></p>
-                <span>Posted by userID: <%= comments[i].userID %></span>
-            </div>
+            <h3><%= subjects[i].subject %></h3>
+            <% for(let j = 0; j < messages.length; j++){ %>
+                <% if(messages[j].subjectID == subjects[i].subjectID){ %>
+                <div class="comment-body">
+                    <p><%= messages[j].comment %></p>
+                    <span>Posted by userID: <%= subjects[i].userID %></span>
+                </div>
+                <% } %>
+            <% } %>
+            <form action="/answer" method="POST" class="answerInput">
+                <input class="subjectIDinput hidden" type="text" name="subjectID" value="<%= i %>">
+                <textarea class="answerArea hidden" name="comment" id="" cols="30" rows="4"></textarea>
+                <button type="submit" class="answerSubmit hidden">Submit</button>
+            </form>
+            <button class="answerButton">Answer</button>
         </div>
         <% } %>
     </section>
