--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,7 +6,9 @@
   </head>
   <body>
     <%- include("../_partials/header") %>
-    <h1>Sveiki atvyke, <%= loggedUser %> <%= loggedUserId%></h1>
+    <section class="hero">
+
+    </section>
 
     <script src="javascripts/main.js"></script>
   </body>
