--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -8,6 +8,7 @@
 html{
     font-size: 16px;
 }
+
 html,
 body {
     margin: 0 auto;
@@ -18,10 +19,22 @@ a {
 }
 
 header {
+  position: fixed;
   width: 100%;
-  background-color: lightgray;
+  background-color: white;
   display: flex;
   justify-content: space-between;
+  padding: 0 10%;
+  box-shadow: 3px 0 5px black;
+}
+
+.logo {
+  width: 70px;
+  height: 70px;
+}
+
+.logo img {
+  width: 100%;
 }
 
 .nav,
@@ -32,6 +45,7 @@ nav{
 
 ul {
   display: flex;
+  margin: 0;
 }
 ul li{
   display: inline;
@@ -42,10 +56,76 @@ ul li{
 .logo {
   display: flex;
 }
-h2 {
-  padding: 15px;
+
+.username {
   margin: auto;
 }
+
+h1 {
+  margin: 0;
+}
+
+h2 {
+  padding: 15px 0;
+  margin: auto;
+}
+
+.hero {
+  width: 100%;
+  height: 100vh;
+  background-image: url('https://cdn-images-1.medium.com/max/1798/1*VwhPiLPTen_Nzl2jiAAymQ.png');
+  background-size: cover;
+}
+
+.forum-page,
+.register-page,
+.login-page {
+  height: 100vh;
+  padding: 100px 10%;
+  background-color: #d60a0a;
+background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='28' height='49' viewBox='0 0 28 49'%3E%3Cg fill-rule='evenodd'%3E%3Cg id='hexagons' fill='%23ffffff' fill-opacity='0.4' fill-rule='nonzero'%3E%3Cpath d='M13.99 9.25l13 7.5v15l-13 7.5L1 31.75v-15l12.99-7.5zM3 17.9v12.7l10.99 6.34 11-6.35V17.9l-11-6.34L3 17.9zM0 15l12.98-7.5V0h-2v6.35L0 12.69v2.3zm0 18.5L12.98 41v8h-2v-6.85L0 35.81v-2.3zM15 0v7.5L27.99 15H28v-2.31h-.01L17 6.35V0h-2zm0 49v-8l12.99-7.5H28v2.31h-.01L17 42.15V49h-2z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+}
+
+.forum-page {
+  height: auto;
+}
+
+.login-form,
+.register-form {
+  background-color: #fff;
+  box-shadow: 2px 2px 5px 1px black;
+  padding: 15px;
+  border-radius: 5px;
+}
+
+.login-form {
+  display: flex;
+  flex-direction: column;
+  width: 300px;
+  justify-content: space-between;
+  height: 140px;
+  margin: 0 auto;
+}
+
+.nav-button,
+.button {
+  width: 120px;
+  margin: 0 auto;
+  background-color: #08AB08; /* Green */
+  border: none;
+  border-radius: 5px;
+  color: white;
+  padding: 10px 28px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+}
+
+.nav-button {
+  background-color: #C72775;
+}
+
 
 h5 {
   display: none;
@@ -56,8 +136,10 @@ h5 {
   flex-direction: column;
   width: 85%;
   margin: 30px auto;
-  background-color: lightseagreen;
-  padding: 15px;
+  background-color: #fff;
+  border-radius: 5px;
+  padding: 3% 5%;
+  box-shadow: 2px 2px 5px 1px black;
 }
 
 #forumComment input {
@@ -77,17 +159,28 @@ h5 {
 .comments-container {
   margin: 0 auto;
   width: 85%;
-  background-color: lightseagreen;
+  /* background-color: lightseagreen; */
 }
 
 .comment {
-  border: 1px solid gray;
-  padding: 15px;
+  /* border: 1px solid gray; */
+  background-color: #fff;
+  padding: 3% 5%;
+  border-radius: 5px;
+  margin: 15px 0;
+  box-shadow: 2px 2px 5px 1px black;
 }
 
 .comment-body {
   border: 1px solid lightgray;
   background-color: #fff;
+  padding: 5px;
+  margin: 3px 0;
+  border-radius: 5px;
+}
+
+span {
+  font-size: 0.7rem;
 }
 
 .hidden {
