--- a/views/forum.ejs
+++ b/views/forum.ejs
@@ -9,43 +9,39 @@
 </head>
 <body>
     <%- include("../_partials/header") %>
-    <div class="forum-header">
-        <h2>Forumas</h2>
-    </div>
-    <!-- <h3><%= loggedUser %></h3> -->
-    <h5><%= loggedUserId %></h5>
-    <section class="comments-container">
-        <% for(let i = 0; i < subjects.length; i++){ %>
-        <div class="comment">
-            <h3><%= subjects[i].subject %></h3>
-            <% for(let j = 0; j < messages.length; j++){ %>
-                <% if(messages[j].subjectID == subjects[i].subjectID){ %>
-                <div class="comment-body">
-                    <p><%= messages[j].comment %></p>
-                    <span>Posted by userID: <%= subjects[i].userID %></span>
-                </div>
+    <main class="forum-page">
+        <section class="comments-container">
+            <% for(let i = 0; i < subjects.length; i++){ %>
+            <div class="comment">
+                <h3><%= subjects[i].subject %></h3>
+                <% for(let j = 0; j < messages.length; j++){ %>
+                    <% if(messages[j].subjectID == subjects[i].subjectID){ %>
+                    <div class="comment-body">
+                        <p><%= messages[j].comment %></p>
+                        <span>Posted by userID: <%= subjects[i].userID %></span>
+                    </div>
+                    <% } %>
                 <% } %>
+                <form action="/answer" method="POST" class="answerInput">
+                    <input class="subjectIDinput hidden" type="text" name="subjectID" value="<%= i %>">
+                    <textarea class="answerArea hidden" name="comment" id="" cols="30" rows="4"></textarea>
+                    <button type="submit" class="answerSubmit hidden">Submit</button>
+                </form>
+                <button class="answerButton">Answer</button>
+            </div>
             <% } %>
-            <form action="/answer" method="POST" class="answerInput">
-                <input class="subjectIDinput hidden" type="text" name="subjectID" value="<%= i %>">
-                <textarea class="answerArea hidden" name="comment" id="" cols="30" rows="4"></textarea>
-                <button type="submit" class="answerSubmit hidden">Submit</button>
-            </form>
-            <button class="answerButton">Answer</button>
-        </div>
-        <% } %>
-    </section>
-    <form id="forumComment" action="/forum" method="POST">
-        <h3>Create new subject:</h3>
-        <input type="text" placeholder="subject" name="subject">
-        <textarea name="comment"  cols="30" rows="10" placeholder="your comment"></textarea>
-        <button type="submit">Submit</button>
-    </form>
+        </section>
+        <form id="forumComment" action="/forum" method="POST">
+            <h3>Create new subject:</h3>
+            <input type="text" placeholder="subject" name="subject">
+            <textarea name="comment"  cols="30" rows="10" placeholder="your comment"></textarea>
+            <button class="button" type="submit">Submit</button>
+        </form>
+    </main>
 
     <script>
-        var user = document.querySelector('h5');
-
-        window.localStorage.setItem('userID', user.innerHTML);
+    
+        window.localStorage.setItem('userID', "<%= loggedUserId %>");
     
     </script>
     <script src="javascripts/main.js"></script>
