--- a/views/login.ejs
+++ b/views/login.ejs
@@ -9,11 +9,13 @@
 </head>
 <body>
         <%- include("../_partials/header") %>
-    <form action="/login" method="POST">
-        <input type="text" placeholder="Username" name="name">
-        <input type="password" placeholder="password" name="psw">
-        <button type="submit">Log in</button>
-    </form>
+    <section class="login-page">
+        <form class="login-form" action="/login" method="POST">
+            <input type="text" placeholder="Username" name="name">
+            <input type="password" placeholder="password" name="psw">
+            <button class="button" type="submit">Log in</button>
+        </form>
+    </section>    
     <script src="javascripts/main.js"></script>
 </body>
 </html>
