--- a/views/register.ejs
+++ b/views/register.ejs
@@ -9,30 +9,32 @@
 </head>
 <body>
     <%- include("../_partials/header") %>
-    <form action="/register" method="POST">
-        <div class="container">
-          <h1>Register</h1>
-          <p>Please fill in this form to create an account.</p>
-          <hr>
-      
-          <label for="name"><b>Name</b></label>
-          <input type="text" placeholder="Name" name="name" required>
-      
-          <label for="psw"><b>Password</b></label>
-          <input type="password" placeholder="Enter Password" name="psw" required>
-      
-          <label for="psw-repeat"><b>Repeat Password</b></label>
-          <input type="password" placeholder="Repeat Password" name="pswrepeat" required>
-          <hr>
-          <p>By creating an account you agree to our <a href="#">Terms & Privacy</a>.</p>
-      
-          <button type="submit" class="registerbtn">Register</button>
-        </div>
+    <section class="register-page">
+      <form class="register-form" action="/register" method="POST">
+          <div class="container">
+            <h1>Register</h1>
+            <p>Please fill in this form to create an account.</p>
+            <hr>
         
-        <div class="container signin">
-          <p>Already have an account? <a href="/login">Sign in</a>.</p>
-        </div>
-      </form>
+            <label for="name"><b>Name</b></label>
+            <input type="text" placeholder="Name" name="name" required>
+        
+            <label for="psw"><b>Password</b></label>
+            <input type="password" placeholder="Enter Password" name="psw" required>
+        
+            <label for="psw-repeat"><b>Repeat Password</b></label>
+            <input type="password" placeholder="Repeat Password" name="pswrepeat" required>
+            <hr>
+            <p>By creating an account you agree to our <a href="#">Terms & Privacy</a>.</p>
+        
+            <button type="submit" class="registerbtn button">Register</button>
+          </div>
+          
+          <div class="container signin">
+            <p>Already have an account? <a href="/login">Sign in</a>.</p>
+          </div>
+        </form>
+    </section>
       <script src="javascripts/main.js"></script>
 </body>
 </html>
